package de.hdm_stuttgart.mi.game.tetromino;

public enum Color {

    CYAN, BLUE, ORANGE, YELLOW, GREEN, PURPLE, RED, SHADOW

}
