package de.hdm_stuttgart.mi.game.tetromino;

/**
 * A set of values for describing a rotation.
 */
public enum Rotation {

    /**
     * Represents the clockwise rotation.
     */
    CLOCKWISE,

    /**
     * Represents the counterclockwise rotation.
     */
    COUNTERCLOCKWISE
    
}
